--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,49 @@
-absl-py==0.9.0
-astunparse==1.6.3
-cachetools==4.1.1
-certifi==2020.6.20
+asn1crypto==0.24.0
+backports.functools-lru-cache==1.6.1
+backports.shutil-get-terminal-size==1.0.0
+Cartopy==0.18.0
 chardet==3.0.4
+cryptography==2.1.4
 cycler==0.10.0
-gast==0.3.3
-google-auth==1.19.0
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
-grpcio==1.30.0
-h5py==2.10.0
-idna==2.10
-importlib-metadata==1.7.0
-joblib==0.16.0
-Keras==2.4.3
-Keras-Preprocessing==1.1.2
-kiwisolver==1.2.0
-Markdown==3.2.2
-matplotlib==3.2.2
-numpy==1.19.0
-oauthlib==3.1.0
-opt-einsum==3.2.1
-pandas==1.0.5
-protobuf==3.12.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+dataclasses==0.6
+decorator==4.1.2
+deprecation==2.1.0
+enum34==1.1.6
+eyeD3==0.9.5
+filetype==1.0.7
+futures==3.3.0
+gyp==0.1
+idna==2.6
+ipaddress==1.0.17
+ipython==5.5.0
+ipython-genutils==0.2.0
+keyring==10.6.0
+keyrings.alt==3.0
+kiwisolver==1.1.0
+matplotlib==2.2.5
+numpy==1.16.6
+olefile==0.45.1
+packaging==20.4
+pathlib2==2.3.0
+pexpect==4.2.1
+pickleshare==0.7.4
+Pillow==5.1.0
+prompt-toolkit==1.0.15
+pycrypto==2.6.1
+Pygments==2.2.0
+pygobject==3.26.1
 pyparsing==2.4.7
+pyshp==2.1.0
 python-dateutil==2.8.1
 pytz==2020.1
-PyYAML==5.3.1
-requests==2.24.0
-requests-oauthlib==1.3.0
-rsa==4.6
-scikit-learn==0.23.1
-scipy==1.4.1
+pyxdg==0.25
+scandir==1.7
+scipy==1.2.3
+SecretStorage==2.3.1
+Shapely==1.7.0
+simplegeneric==0.8.1
 six==1.15.0
-sklearn==0.0
-tensorboard==2.2.2
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.2.0
-tensorflow-estimator==2.2.0
-termcolor==1.1.0
-threadpoolctl==2.1.0
-urllib3==1.25.9
-Werkzeug==1.0.1
-wrapt==1.12.1
-zipp==3.1.0
+subprocess32==3.5.4
+traitlets==4.3.2
+wcwidth==0.1.7
+youtube-dl==2020.5.8
